--- a/chartfile.yaml
+++ b/chartfile.yaml
@@ -12,6 +12,10 @@ repositories:
   url: https://charts.external-secrets.io
 - name: externalSecretsGHCR
   url: oci://ghcr.io/external-secrets/charts
+- name: strimzi
+  url: oci://quay.io/strimzi-helm
+- name: emberstack
+  url: https://emberstack.github.io/helm-charts
 requires:
 - chart: dcsi/democratic-csi
   version: 0.15.0
@@ -25,4 +29,8 @@ requires:
   version: v1.1.1
 - chart: externalSecretsGHCR/bitwarden-sdk-server
   version: v0.5.0
+- chart: strimzi/strimzi-kafka-operator
+  version: 0.49.1
+- chart: emberstack/reflector
+  version: v9.1.45
 version: 1
